--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chalk": "^4.0.0",
     "discord.js": "^12.2.0",
     "eslint": "^7.1.0",
-    "loadash": "^1.0.0"
+    "loadash": "^1.0.0",
+    "snekfetch": "^4.0.4"
   }
 }
